2006-05-15  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* index.html: Add some more back-dated news entries.

2006-05-12  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* index.html: Add back-dated news entries to reflect ongoing
	improvements to GCJ.

2006-02-09  Tom Tromey  <tromey@redhat.com>

	* done.html: Added H2 Database Engine.

2005-06-05  Gerald Pfeifer  <gerald@pfeifer.com>

	* docs.html: Adjust link to Linux Journal article.

2005-06-05  Gerald Pfeifer  <gerald@pfeifer.com>
	
	* done.html: Remove broken link to Webmiel.

2005-04-30  Gerald Pfeifer  <gerald@pfeifer.com>

	* done.html: Remove links to Freestyler Toolkit.

2005-02-23  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Make link to /onlinedocs need to refer to gcc.gnu.org.

2005-02-18  Tom Tromey  <tromey@redhat.com>

	* index.html: Added news items.

2005-02-13  Gerald Pfeifer  <gerald@pfeifer.com>

	* projects.html: Adjust Mozilla URL.

2005-02-07  Gerald Pfeifer  <gerald@pfeifer.com>

	* index.html: Adjust link to Linux Journal article on Eclipse.

2005-01-20  Tom Tromey  <tromey@redhat.com>

	* docs.html: Added link to API docs.

2004-12-01  Tom Tromey  <tromey@redhat.com>

	* index.html: HTML fixlets.

	* index.html: Mention HPPA port and BC merge.

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-26  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-23  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-17  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-14  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-15  Gerald Pfeifer  <gerald@pfeifer.com>

	* faq.html: Properly uppercase SPARC.

2004-11-13  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-09  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.

2004-11-08  Tom Tromey  <tromey@redhat.com>

	* libgcj-classpath-compare.html: Rebuilt.
