@@ -83,14 +83,6 @@ and <code>javax.security.cert</code> support), we recommend
 <!-- News entries start here -->
 
 <tr><td valign="top">
-<b>May 1, 2006</b>
-</td><td>
-The May 2006 issue of Linux Journal contains the article &quot;<a
-href="http://www.linuxjournal.com/article/8757">Embedded Java with
-GCJ</a>&quot; by Gene Sally.
-</td></tr>
-
-<tr><td valign="top">
 <b>April 26, 2006</b>
 </td><td>
 Andrew Haley has merged in a <a
