@@ -1,3 +1,8 @@
+2006-05-16  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* index.html: Remove news entry about unreadable Linux Journal
+	article.
+
 2006-05-15  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* index.html: Add some more back-dated news entries.
